# frame-oss

./: .gitignore  LICENSE.txt  Makefile  README.md  app.py  main.py  pyproject.toml  quickstart.py  refresh_token.py  requirements.txt
docs/devices/: kindle-fire.md
static/foundation/: index.html
static/frame/: frame.css  frame.js
static/homepage/: homepage.js
templates/: README.txt  frame.html  homepage.html  iframe.html  photo_frame.html  web_frame.html
templates/components/: menu.jinja2
