[tool.poetry]
name = "frame-oss"
version = "0.1.0"
description = "Web-based photo frame software"
authors = ["Ben Potter <me@bpmct.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
google-api-python-client = "^2.33.0"
google-auth-oauthlib = "^0.4.6"
protobuf = "^3.19.1"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.2"
supabase = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
